--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -3,7 +3,7 @@ name: Android CI
 on:
   push:
     branches:
-      - master
+      - t
 
 jobs:
   build:
@@ -27,8 +27,8 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      - name: Run unit tests
-        run: ./gradlew test --stacktrace
+     # - name: Run unit tests
+     #   run: ./gradlew test --stacktrace
 
       - name: Build with Gradle
         run: ./gradlew assembleRelease --stacktrace
@@ -39,15 +39,3 @@ jobs:
       #     name: AdAway-dev
       #     path: app/build/outputs/apk/release/app-release-unsigned.apk
       
-      - name: Update dependency graph
-        uses: mikepenz/gradle-dependency-submission@v0.8.5 # Deprecated: need to be changed
-        with:
-          gradle-dependency-path: "app/build.gradle"
-          gradle-build-module: ":app"
-          gradle-build-configuration: "releaseCompileClasspath"
-
-      - name: Analyze project
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew -Dorg.gradle.jvmargs=-XX:MaxMetaspaceSize=512m sonarqube
